--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dartz: ^0.10.1
+  flutter_hooks: ^0.18.2+1
 
 dev_dependencies:
   flutter_test:
