--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
   flutter:
     sdk: flutter
   dartz: ^0.10.1
-  flutter_hooks: ^0.18.2+1
+  flutter_hooks: ^0.18.3
+  go_router: ^3.0.7
 
 dev_dependencies:
   flutter_test:
