--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,6 +10,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  crypto: ^3.0.1
   dartz: ^0.10.1
   flutter_hooks: ^0.18.3
   go_router: ^3.0.7
