--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,22 +4,22 @@ version: 0.0.1
 homepage:
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: '>=2.18.4 <3.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
   crypto: ^3.0.2
   dartz: ^0.10.1
-  flutter_hooks: ^0.18.4
-  go_router: ^4.0.0
-  hooks_riverpod: ^2.0.0-dev.9
+  flutter_hooks: ^0.18.5+1
+  go_router: ^5.1.9
+  hooks_riverpod: ^2.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
-  filterable_logger: ^0.0.6
+  filterable_logger: ^0.0.7
 
 flutter:
