--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,9 +13,11 @@ dependencies:
   crypto: ^3.0.2
   dartz: ^0.10.1
   flutter_hooks: ^0.18.5+1
-  go_router: ^5.1.9
+  go_router: ^6.0.0
   hooks_riverpod: ^2.1.1
   filterable_logger: ^0.0.7
+  flutter_svg: ^1.1.6
+  google_maps_flutter: ^2.2.2
 
 dev_dependencies:
   flutter_test:
