Revert "Migrate `flutter_svg` from `1.1.6` to `2.0.0`"
This reverts commit 60ac698f49b085a1d08cfcc126ea9f3379903f60.

# Conflicts:
#	.flutter-plugins-dependencies
#	lib/utilities/bitmap_descriptor_helper.dart
#	pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   go_router: ^6.0.3
   hooks_riverpod: ^2.1.3
   filterable_logger: ^0.0.7
-  flutter_svg: ^2.0.0+1
+  flutter_svg: ^1.1.6
   google_maps_flutter: ^2.2.3
 
 dev_dependencies:
