--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,10 +13,10 @@ dependencies:
   crypto: ^3.0.2
   dartz: ^0.10.1
   flutter_hooks: ^0.18.5+1
-  go_router: ^6.0.3
+  go_router: ^6.0.6
   hooks_riverpod: ^2.1.3
   filterable_logger: ^0.0.7
-  flutter_svg: ^1.1.6
+  flutter_svg: ^2.0.0+1
   google_maps_flutter: ^2.2.3
 
 dev_dependencies:
