--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,12 +12,12 @@ dependencies:
     sdk: flutter
   crypto: ^3.0.2
   dartz: ^0.10.1
-  flutter_hooks: ^0.18.5+1
-  go_router: ^6.0.6
-  hooks_riverpod: ^2.1.3
+  flutter_hooks: ^0.18.6
+  go_router: ^6.2.0
+  hooks_riverpod: ^2.3.0
   filterable_logger: ^0.0.7
-  flutter_svg: ^2.0.0+1
-  google_maps_flutter: ^2.2.3
+  flutter_svg: ^2.0.2
+  google_maps_flutter: ^2.2.4
 
 dev_dependencies:
   flutter_test:
